Enabled CSS Aggregating for packages and themes Aggregated CSS is cached for future use Added Wax::XMLFixEntities for allowing common HTML entities in waxml files tests/index.php demonstrates basic functionality

--- a/trunk/themes/defaultblue/css/wax.css
+++ b/trunk/themes/defaultblue/css/wax.css
@@ -6,7 +6,7 @@
     font-family     : Verdana, Arial, sans-serif;
 }
 html, body {
-    background      : [PrimaryLight];
+    background      : white;
     color           : black;
 }
 
